# NoteProject

./: build.gradle.kts  settings.gradle
android/framework/: README.MD
android/framework/src/androidTest/java/com/oyke/framework/: ExampleInstrumentedTest.kt
android/framework/src/test/java/com/oyke/framework/: ExampleUnitTest.kt
android/iot/src/androidTest/java/com/oyke/iot/: ExampleInstrumentedTest.kt
android/jni/src/androidTest/java/com/oyke/jni/: ExampleInstrumentedTest.kt
android/jni/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/jni/src/main/java/com/oyke/jni/: NativeUtil.kt
android/jni/src/test/java/com/oyke/jni/: ExampleUnitTest.kt
android/thirdpartylibrary/: build.gradle  笔记.MD
android/thirdpartylibrary/src/androidTest/java/com/oyke/thirdpartylibrary/: ExampleInstrumentedTest.kt
android/thirdpartylibrary/src/test/java/com/oyke/thirdpartylibrary/: ExampleUnitTest.kt
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/oyke/note/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/oyke/note/: MainActivity.kt
app/src/test/java/com/oyke/note/: ExampleUnitTest.kt
base/algorithm/: build.gradle
base/algorithm/src/androidTest/java/com/oyke/datastructureandalgorithm/: ExampleInstrumentedTest.kt
base/designpattern/: READEME.MD
base/network/: build.gradle
client/: build.gradle
client/src/androidTest/java/com/oyke/client/: ExampleInstrumentedTest.kt
client/src/main/java/com/oyke/client/: MainActivity.kt
client/src/main/java/com/oyke/service/: IKtvController.java
client/src/test/java/com/oyke/client/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
language/c/: build.gradle
language/cpp/: build.gradle
language/cpp/src/main/cpp/: CMakeLists.txt
language/java/: build.gradle
module_android/framework/: build.gradle  build.gradle.kts
module_android/iot/: build.gradle  build.gradle.kts  蓝牙.MD
module_android/ndk/: build.gradle  build.gradle.kts
module_android/ndk/src/main/cpp/: CMakeLists.txt  nativelib.cpp
module_android/thirdpartylibrary/: build.gradle.kts  笔记.MD
module_base/algorithm/: build.gradle  build.gradle.kts
module_base/designpattern/: build.gradle  build.gradle.kts
module_base/network/: build.gradle.kts
module_language/cpp/src/main/cpp/: cpp.cpp
module_language/java/: build.gradle.kts
module_language/kotlin/: build.gradle  build.gradle.kts
nativelib/: build.gradle
nativelib/src/androidTest/java/com/oyke/nativelib/: ExampleInstrumentedTest.kt
nativelib/src/main/cpp/: nativelib.cpp
nativelib/src/main/java/com/oyke/nativelib/: NativeLib.kt
nativelib/src/test/java/com/oyke/nativelib/: ExampleUnitTest.kt
sample/FFmpegDemo/: build.gradle.kts
sample/FFmpegDemo/src/main/: AndroidManifest.xml
sample/FFmpegDemo/src/main/cpp/: CMakeLists.txt  FFmpegUtils.cpp
sample/OpenCVDemo/: build.gradle.kts
sample/OpenCVDemo/src/main/: AndroidManifest.xml
sample/OpenCVDemo/src/main/cpp/: CMakeLists.txt  OpenCVUtils.cpp  opencvdemo.cpp
sample/OpenCVDemo/src/main/res/layout/: activity_main.xml
sample/client/src/main/: AndroidManifest.xml
sample/client/src/main/res/layout/: activity_main.xml
sample/ftpdemo/: build.gradle
sample/ftpdemo/src/main/: AndroidManifest.xml
sample/ftpdemo/src/main/res/values/: strings.xml
sample/service/: build.gradle
sample/service/src/main/: AndroidManifest.xml
sample/uvcdemo/: build.gradle
sample/uvcdemo/src/main/: AndroidManifest.xml
sample/uvcdemo/src/main/res/layout/: activity_main.xml
sample/uvcdemo/src/main/res/values/: strings.xml
service/src/main/java/com/oyke/service/: MainActivity.kt
service/src/test/java/com/oyke/service/: ExampleUnitTest.kt
(+46 files in other folders)
